Actions
Bug #8200
closedcmd/lp: misleading-indentation
Start date:
2017-05-10
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Building with gcc 6:
do_printer.c:113:3: error: this 'if' clause does not guard... [-Werror=misleading-indentation] if (!oldp) ^~ do_printer.c:120:4: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'if' if (p_add && add_paper_to_printer(p_add, p) == -1) { ^~ cc1: all warnings being treated as errors netpr.c:372:4: error: this 'if' clause does not guard... [-Werror=misleading-indentation] if (tcp_port != NULL) ^~ netpr.c:374:5: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'if' syslog(LOG_DEBUG, "tcp_port %s", ^~~~~~ cc1: all warnings being treated as errors
Updated by Electric Monk about 5 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 10243bb069053a813aa803c1bbd2620ef4f0deab
commit 10243bb069053a813aa803c1bbd2620ef4f0deab Author: Toomas Soome <tsoome@me.com> Date: 2017-05-14T18:13:25.000Z 8200 cmd/lp: misleading-indentation Reviewed by: Marcel Telka <marcel@telka.sk> Approved by: Gordon Ross <gordon.w.ross@gmail.com>
Actions